2000-03-09  Roland McGrath  <roland@baalperazim.frob.com>

	* balloc.c (ext2_free_blocks, ext2_new_block): Fix formats to avoid
	-Wformat warnings.
	* getblk.c (ext2_alloc_block, inode_getblk, ext2_getblk): Likewise.
	* ialloc.c (ext2_count_free_inodes): Likewise.
	* truncate.c (trunc_direct): Likewise.
	* pager.c (pending_blocks_write, diskfs_grow): Likewise.

2000-03-03  Roland McGrath  <roland@baalperazim.frob.com>

	* dir.c (diskfs_get_directs): Don't allocate buffer for *DATA until
	after scanning for ENTRY and possibly returning EOF.

2000-02-05  Roland McGrath  <roland@baalperazim.frob.com>

	* ext2_fs.h: Update from Linux 2.3.42 version (ext2_fs_i.h unchanged).
	* inode.c (check_high_bits): In accordance with Linux 2.3.42 behavior,
	permit 32-bit uids on non-hurd filesystems unless i_dtime is zero
	(which indicates an extra old Linux ext2 implementation I guess).

2000-01-16  Mark Kettenis  <kettenis@gnu.org>

	* pager.c (file_pager_write_page): Lock NODE->dn->alloc_lock
	before accessing NODE->allocsize.  Fixes Debian bug #40302.

1999-10-13  Roland McGrath  <roland@baalperazim.frob.com>

	* ext2fs.c (diskfs_name_max): New variable.

1999-10-06  Roland McGrath  <roland@baalperazim.frob.com>

	* hyper.c (get_hypermetadata): Avoid overflow in calculation of disk
	size vs superblock-specified requirement.
	Add a warning for wasted disk blocks after last filesystem block.

1999-10-03  Roland McGrath  <roland@baalperazim.frob.com>

	* dir.c (ext2_file_type): #if 0 out this variable.
	(diskfs_get_directs): #if 0 out code to interpret file_type field
	and set d_type.  Instead, always return DT_UNKNOWN for now.

	* dir.c (file_type_ext2): #if 0 out.
	(diskfs_direnter_hard): #if 0 out code to set file_type field in
	directory entries.  Instead, always set it to zero.

1999-10-03  Roland McGrath  <roland@baalperazim.frob.com>

	* bitmap.c (ffz): Subtract one from (1-origin) result of ffs to get
	our (0-origin) result.

	* Makefile (LCLHDRS): bitmap.h -> bitmap.c
